--- a/package.json
+++ b/package.json
@@ -47,10 +47,13 @@
     "next": "15.2.3",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
+    "react-arborist": "^3.4.3",
+    "react-complex-tree": "^2.6.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
+    "simple-git": "^3.27.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
@@ -59,6 +62,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "9.25.1",
+    "eslint-config-next": "15.3.1",
     "genkit-cli": "^1.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
