--- a/.devcontainer/docker-compose.dev.yml
+++ b/.devcontainer/docker-compose.dev.yml
@@ -4,15 +4,15 @@ version: '3.8'
 services:
   collabflow:
     build:
-      # Explicitly set context using the workspace folder variable
-      context: ${localWorkspaceFolder} # Should resolve to project root
+      # Set context relative to the project root where devcontainer command runs
+      context: .
       dockerfile: Dockerfile # Path relative to context (project root)
       target: base # Build only the 'base' stage
     # Override or extend settings from the main docker-compose.yml
     volumes:
       # Mount the project root directory into the container at /app
       # This allows live code changes to be reflected inside the container
-      - ..:/app:cached # Mount project root (one level up from .devcontainer) to /app
+      - .:/app:cached # Mount project root (one level up from .devcontainer) to /app
       # Define persistent named volumes for node_modules and .next
       # This prevents the host's node_modules/build artifacts from overwriting
       # those potentially built inside the container during setup,
