--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "firebase": "^11.3.0",
     "framer-motion": "^12.9.1",
     "genkit": "^1.0.4",
-    "jose": "6.0.10",
+    "jose": "^6.0.10",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
