fix: Move from Edge to Node.js runtime for authentication
- Force Node.js runtime in middleware and auth routes
- Create dedicated auth library with proper JWT handling
- Add runtime environment validation for secrets
- Implement app seed validation for improved token security
- Add user settings and preferences modules

--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "gen-admin-link": "node scripts/generate-admin-link.mjs"
+    "gen-admin-link": "npx tsx scripts/generate-admin-link.ts",
+    "db:migrate": "node scripts/run-migrations.mjs run",
+    "db:migrate:create": "node scripts/run-migrations.mjs create",
+    "db:migrate:revert": "node scripts/run-migrations.mjs revert",
+    "db:migrate:list": "node scripts/run-migrations.mjs list",
+    "db:reset": "RESET_MIGRATIONS=true node scripts/run-migrations.mjs run",
+    "db:reset-full": "node scripts/reset-db.js"
   },
   "dependencies": {
-    "@genkit-ai/googleai": "^1.0.4",
-    "@genkit-ai/next": "^1.0.4",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -36,43 +40,42 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@tanstack-query-firebase/react": "^1.0.5",
-    "@tanstack/react-query": "^5.66.0",
     "better-sqlite3": "^11.9.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "commander": "^13.1.0",
     "date-fns": "^3.6.0",
-    "firebase": "^11.3.0",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.9.1",
-    "genkit": "^1.0.4",
     "jose": "^6.0.10",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.475.0",
-    "next": "15.2.3",
+    "next": "^15.4.0-canary.9",
+    "next-themes": "^0.4.6",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-arborist": "^3.4.3",
-    "react-complex-tree": "^2.6.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
-    "recharts": "^2.15.1",
     "simple-git": "^3.27.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "umzug": "^3.8.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "9.25.1",
+    "@types/node": "^20.17.31",
+    "@types/react": "^18.3.20",
+    "@types/react-dom": "^18.3.6",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.25.1",
     "eslint-config-next": "15.3.1",
-    "genkit-cli": "^1.0.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
+    "tsx": "^4.19.3",
     "typescript": "5.8.3"
   }
 }
