--- a/package.json
+++ b/package.json
@@ -38,6 +38,16 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
+    "@tus/file-store": "^2.0.0",
+    "@tus/server": "^2.1.0",
+    "@uppy/core": "^4.4.4",
+    "@uppy/dashboard": "^4.3.3",
+    "@uppy/drag-drop": "^4.1.2",
+    "@uppy/file-input": "^4.1.2",
+    "@uppy/progress-bar": "^4.2.1",
+    "@uppy/react": "^4.2.3",
+    "@uppy/status-bar": "^4.1.3",
+    "@uppy/tus": "^4.2.2",
     "better-sqlite3": "^11.9.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
